--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -14,8 +14,5 @@ jobs:
 
       - name: Log
         run: |
-          printf "branch: %s\n" "${{ github.GITHUB_REF_NAME }}"
-          printf "branch: %s\n" "${{ github.ref }}"
-          printf "branch: %s\n" "${{ github.ref_name }}"
-          printf "branch: %s\n" "$GITHUB_REF_NAME"
+          printf "branch: %s\n" "${{ github.head_ref }}"
           
